persona explore modal spacing issues and text changes

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -188,12 +188,12 @@ code,pre{font:inherit;}
 .exploretiledetailsarea       { border: 1px solid rgba(0, 0, 0, .1); border-radius:10px; padding:10px; background-color:whitesmoke; margin:0 21px 11px 21px;}
 .exploretiledetailsarea .bigexploreimagespace         { display:inline-block; vertical-align: top;}
 .exploretiledetailsarea .bigexploreimagespace img     { align:left; width:120px; margin-right:10px}
-.exploredetailsspace          { display:inline-block; width:480px;vertical-align: top;}
+.exploredetailsspace          { display:inline-block; width:473px;vertical-align: top;}
 .exploredetailsspace button   { margin-top:10px}
 .exploretextdetails h2        { font-size:23px; font-weight:bold; font-style:italic;}
 
 /* modal close button*/
-.exploreheader>.modal_close{ margin: -4px 9px 0 0; }
+.exploreheader>.modal_close{ margin: -4px 19px 0 0; }
 .modal_close { float:right; cursor:pointer;}
 .modal_close img{ width:20px; }
 
